[package]
name = "masquerade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib"]   # The crate types to generate.

[dependencies]
log = { version = "0.4", features = ["std"] }
env_logger = "0.10"
url = "1"

quiche = "0.16.0"
tokio = { version = "1", features = ["full"] }
ring = "0.16"

httparse = "1.8"
socks5-proto = "0.3"

[dev-dependencies]
rand = "0.8"
env_logger = "*"
test-log = "0.2"
