[package]
name = "masquerade"
edition = "2021"
version = "0.1.0"
license = "MIT"
keywords = ["masque", "proxy"]
categories = ["network-programming"]
description = "A implementation of MASQUE based on RFC 9114, 9227, and 9228"
homepage = "https://github.com/jromwu/masquerade"
repository = "https://github.com/jromwu/masquerade"


[lib]
crate-type = ["lib"]

[dependencies]
log = { version = "0.4", features = ["std"] }
env_logger = "0.10"
url = "1"

quiche = "0.16.0"
tokio = { version = "1", features = ["full"] }
ring = "0.16"

httparse = "1.8"
socks5-proto = "0.3"

[dev-dependencies]
rand = "0.8"
env_logger = "*"
test-log = "0.2"
